# testrepo2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  opencode.json  worktrees.json
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ci.yml  feature.yml
.github/workflows/: agent-guard.yml  ci.yml
.opencode/agents/: architect-agent.md  backend-agent.md  contracts-agent.md  frontend-agent.md  github-agent.md  infra-agent.md  reviewer.md  test-engineer.md  worker-agent.md
.opencode/commands/: ci-fix.md  gh-issue.md  gh-pr.md  issue-build.md  issue-plan.md  review.md  test.md
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/tubedigest/: database.py  dependencies.py  main.py  models.py  publisher.py  repository.py  settings.py  sse.py
apps/backend/src/tubedigest/routers/: videos.py
apps/backend/tests/: conftest.py  test_api.py  test_health.py  test_publisher.py  test_repository.py  test_settings.py
apps/frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  contracts.md  decisions.md  engineering.md  glossary.md  issue-guidelines.md  pipeline.md  project.md  roadmap.md  testing.md  workers.md
docs/development/: import-issues.md  worktrees.md
docs/github/: actions.md  github-cli.md
docs/issues/: 01-phase2-zod-schemas.md  04-phase3-publisher.md  (+18 more)
scripts/: create-worktrees.ps1  create-worktrees.sh  import-issues.ps1  import-issues.sh
(+63 files in other folders)
